New README, removed start tools.